@@ -1,8 +1,10 @@
 Version 2.7.4dev:
 
 * Fixed building with ./configure --disable-drivesound --disable-slirp
-  --disable-prowizard --disable-cdtv --disable-savestate.
+  --disable-prowizard --disable-cdtv --disable-savestate
+  --disable-parallel-port and others.
 * Some cleanup in the configure script.
+* Remove dependency on GLU.
 * Do not use built-in libmpeg2.
 
 Version 2.7.3dev:
